--- a/MusicPlayer/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MusicPlayer/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" mc:Ignorable="d" x:Class="MusicPlayer.MainWindow"
-        Title="MainWindow" Height="484" Width="350" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" MaxWidth="350" MinWidth="350" MouseLeftButtonDown="Window_MouseLeftButtonDown_1" MinHeight="94" Background="{x:Null}">
+        Title="MainWindow" Height="484" Width="350" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" MaxWidth="350" MinWidth="350" MouseLeftButtonDown="Window_MouseLeftButtonDown_1" MinHeight="94" Background="{x:Null}" Loaded="Window_Loaded_1">
     <Window.Resources>
         <SolidColorBrush x:Key="TabControlNormalBorderBrush" Color="#8C8E94"/>
         <Style x:Key="TabControlStyle1">
@@ -1466,6 +1466,35 @@
         		</Setter.Value>
         	</Setter>
         </Style>
+        <Style x:Key="ListBoxStyle2" TargetType="{x:Type ListBox}">
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource ListBorder}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
+            <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBox}">
+                        <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="1" SnapsToDevicePixels="true">
+                            <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}" Template="{DynamicResource ScrollViewerControlTemplate1}">
+                                <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            </ScrollViewer>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsGrouping" Value="true">
+                                <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid>
         <ToolBarPanel x:Name="OpacityPanel" HorizontalAlignment="Left" Height="5" Margin="0,94,0,0" VerticalAlignment="Top" Width="350"/>
@@ -1504,7 +1533,7 @@
                         <ImageBrush ImageSource="Image/pl_prev1.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="BNewPL" Content="Button" Grid.Column="7" Style="{DynamicResource ButtonStyle7}" Foreground="{x:Null}" BorderBrush="{x:Null}">
+                <Button x:Name="BNewPL" Content="Button" Grid.Column="7" Style="{DynamicResource ButtonStyle7}" Foreground="{x:Null}" BorderBrush="{x:Null}" Click="BNewPL_Click">
                     <Button.Background>
                         <ImageBrush ImageSource="Image/new_pl.png" Stretch="Uniform"/>
                     </Button.Background>
@@ -1528,9 +1557,9 @@
         </ToolBarPanel>    
 
         <TabControl x:Name="PlayListTabs" ItemContainerStyle="{DynamicResource TabItemStyle1}" HorizontalAlignment="Left" Margin="0,146,0,59" Width="350" Style="{DynamicResource TabControlStyle1}">
-            <TabItem Header="Default" Style="{DynamicResource TabItemStyle1}"  Foreground="White" FontSize="16" FontFamily="Segoe UI Light">
+            <TabItem Header="My music" Style="{DynamicResource TabItemStyle1}"  Foreground="White" FontSize="16" FontFamily="Segoe UI Light">
                 <Grid>
-                    <ListBox x:Name="PlayList" ItemContainerStyle="{DynamicResource ListBoxItemStyle1}" Background="Black" BorderBrush="Black" SelectedIndex="10" Foreground="#FF5D6655" Style="{DynamicResource ListBoxStyle1}"/>
+                    <ListBox x:Name="PlayListBox" ItemContainerStyle="{DynamicResource ListBoxItemStyle1}" Background="Black" BorderBrush="Black" SelectedIndex="-1" Foreground="#FF5D6655" Style="{DynamicResource ListBoxStyle2}" MouseDoubleClick="PlayListBox_MouseDoubleClick"/>
                 </Grid>
             </TabItem>
         </TabControl>
