--- a/MusicPlayer/MusicPlayer/App.xaml
+++ b/MusicPlayer/MusicPlayer/App.xaml
@@ -1,8 +1,10 @@
 ﻿<Application x:Class="MusicPlayer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <system:Double x:Key="__XSTATIC_NAME_SystemParameters.HorizontalScrollBarButtonWidthKey" />
     </Application.Resources>
 </Application>
